--- a/Lira.html
+++ b/Lira.html
@@ -24,7 +24,7 @@
         <svg
           xmlns="http://www.w3.org/2000/svg"
           height="30"
-          viewBox="0 0 24 24"
+          viewbox="0 0 24 24"
           width="30"
         >
           <path
@@ -89,11 +89,178 @@
           </li>
         </ul>
       </div>
-
       <!-- Navbar content -->
     </nav>
 
-    <h1 class="text-center">Lira Presentation</h1>
+    <div class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="Present.Details/3-302-2000x1333.jpg"
+            class="d-block w-100"
+            alt="#"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>
+              The concept of the entertaining and recreational complex “LIRA”
+            </h5>
+            <p>Algarve Portugal</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            src="Present.Details/yj_gwsbyut.jpg"
+            class="d-block w-100"
+            alt="#"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="Present.Details/catch-7.jpg"
+            class="d-block w-100"
+            alt="#"
+          />
+        </div>
+      </div>
+    </div>
+    <main>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title text-center">
+                General lay-out and land improvement
+              </h5>
+              <h6 class="card-subtitle mb-2 text-muted text-center">
+                Card subtitle
+              </h6>
+              <p class="card-text">
+                The complex consists of several main and also a number of
+                auxiliary facilities. The main constructions are a hotel, with
+                the building area of 828.00 sq.m, a restaurant, the building
+                area of 540.00 sq.m and a sports and recreational complex of 576
+                sq.m. There are three planned access points into the complex of
+                the total area of 1.2 hectares. The main traffic stream is
+                planned from the side of the hotel and the sports complex. All
+                access points and approaches are stone paving. It is planned to
+                build two eco-parking areas for 60 parking lots with a
+                possibility to charge electric vehicles and also parking lots
+                for bicycles. The project provides the proposals on land
+                improvement within the area, vertical planning and gardening. In
+                order to provide services to people with limited mobility
+                (people with disabilities), the full range of actions is
+                envisaged.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <img
+              src="Present.Details/VEW_04_2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Hotel</h5>
+              <p class="card-text">
+                The designed building is intended for accommodation of clients
+                of a complex. The hotel is a five-storied building of 16 m high
+                above the ground level and one technical floor below ground
+                level, with the building area of 828.00 sq. m (category 4 ****,
+                for 62 rooms) The building belongs to the main constructive
+                system with longitudinal external and internal bearing walls.
+                The building framework: monolithic reinforced concrete beams and
+                columns The foundation: monolithic reinforced concrete raft
+                External walls: ceramic block (380 mm thick) or brick of porous
+                brick (380 mm thick). First floor plate: monolithic reinforced
+                concrete (200 mm thick). Floor and roof slab: monolithic
+                reinforced concrete (200 mm thick). Roof: heat-insulated
+                membrane with an internal organized drain. Internal walls:
+                ceramic block (250 mm thick) or brick block from a porous brick
+                (250 mm thick) Partitions: gypsum board (with siding by
+                plasterboard in two layers on both sides 150 mm thick with sound
+                insulation from mineral wool slabs.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="card">
+            <img
+              src="Present.Details/VEW_05_2.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Restaurant</h5>
+              <p class="card-text">
+                The designed building is intended for providing high-quality
+                food services with a wide range of dishes and comfortable
+                pastime of the clients. The restaurant is a two-storied building
+                of 8 meters high, with the building area of 540 sq.m. The
+                building belongs to the main constructive system with
+                longitudinal external and internal bearing walls. The building
+                framework: monolithic reinforced concrete beams and columns The
+                foundation: monolithic reinforced concrete raft External walls:
+                ceramic block (380 mm thick) or brick of porous brick (380 mm
+                thick). First floor plate: monolithic reinforced concrete (200
+                mm thick). Floor and roof slab: monolithic reinforced concrete
+                (200 mm thick). Roof: heat-insulated membrane with an internal
+                organized drain. Internal walls: ceramic block (250 mm thick) or
+                brick block from a porous brick (250 mm thick) Partitions:
+                gypsum board (with siding by plasterboard in two layers on both
+                sides 150 mm thick with sound insulation from mineral wool slabs
+                .
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="card">
+            <img
+              src="Present.Details/VEW_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Recreational complex</h5>
+              <p class="card-text">
+                The designed building is intended for providing professional
+                recreational and cosmetology services for clients. It is a
+                two-storied building of 8 m high, with the building area of 576
+                sq.m. The building belongs to the main constructive system with
+                longitudinal external and internal bearing walls. The building
+                framework: monolithic reinforced concrete beams and columns The
+                foundation: monolithic reinforced concrete raft External walls:
+                ceramic block (380 mm thick) or brick of porous brick (380 mm
+                thick). First floor plate: monolithic reinforced concrete (200
+                mm thick). Floor and roof slab: monolithic reinforced concrete
+                (200 mm thick). Roof: heat-insulated membrane with an internal
+                organized drain. Internal walls: ceramic block (250 mm thick) or
+                brick block from a porous brick (250 mm thick) Partitions –
+                brick 150 mm thick .
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
