--- a/Lira.html
+++ b/Lira.html
@@ -15,11 +15,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-
     <title>Lira Presentation</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #762022">
+    <nav class="navbar navbar-light" style="background-color: #762022;">
       <a class="navbar-brand" style="font-style: italic" href="###">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -133,7 +132,7 @@
     <main>
       <div class="row">
         <div class="col-sm-12">
-          <div class="card">
+          <div class="card border-secondary mb-3">
             <div class="card-body">
               <h5 class="card-title text-center">
                 General lay-out and land improvement
@@ -165,9 +164,9 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <div class="card">
+          <div class="card border-secondary mb-3">
             <img
-              src="Present.Details/VEW_04_2.png"
+              src="Present.Details/download.jpeg"
               class="card-img-top"
               alt="..."
             />
@@ -192,15 +191,15 @@
                 plasterboard in two layers on both sides 150 mm thick with sound
                 insulation from mineral wool slabs.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-dark">More information</a>
             </div>
           </div>
         </div>
 
         <div class="col-sm-4">
-          <div class="card">
+          <div class="card border-secondary mb-3">
             <img
-              src="Present.Details/VEW_05_2.png"
+              src="Present.Details/b311dc0b7301e7408ccdedb30f92ef85.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -225,15 +224,15 @@
                 sides 150 mm thick with sound insulation from mineral wool slabs
                 .
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-dark">More information</a>
             </div>
           </div>
         </div>
 
         <div class="col-sm-4">
-          <div class="card">
+          <div class="card border-secondary mb-3">
             <img
-              src="Present.Details/VEW_01.png"
+              src="Present.Details/download (1).jpeg"
               class="card-img-top"
               alt="..."
             />
@@ -255,11 +254,28 @@
                 brick block from a porous brick (250 mm thick) Partitions –
                 brick 150 mm thick .
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-dark">More information</a>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="iframe-container" ; style="width: 100%; position: absolute;">
+        <h5>Location</h5>
+        <iframe
+          width="100%"
+          height="600"
+          src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=paradise%20beach%20carvoeiro%20algarve%20portugal+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
+          frameborder="0"
+          scrolling="no"
+          marginheight="0"
+          marginwidth="0"
+          ><a href="https://www.maps.ie/coordinates.html"
+            >You can find us here!</a
+          ></iframe
+        >
+      </div>
+      <br />
     </main>
 
     <!-- Optional JavaScript -->
