--- a/Lira.html
+++ b/Lira.html
@@ -15,6 +15,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
     <title>Lira Presentation</title>
   </head>
   <body>
@@ -97,26 +98,27 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       </ol>
-
+      <div class="carousel-caption d-none d-md-block">
+        <h3>
+          The concept of the entertaining and recreational complex “LIRA”
+        </h3>
+        <h5>Algarve Portugal</h5>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
             src="Present.Details/3-302-2000x1333.jpg"
             class="d-block w-100"
+            style="height: 600px; object-fit: cover;"
             alt="#"
           />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>
-              The concept of the entertaining and recreational complex “LIRA”
-            </h5>
-            <p>Algarve Portugal</p>
-          </div>
         </div>
 
         <div class="carousel-item">
           <img
             src="Present.Details/yj_gwsbyut.jpg"
             class="d-block w-100"
+            style="height: 600px; object-fit: cover;"
             alt="#"
           />
         </div>
@@ -124,6 +126,7 @@
           <img
             src="Present.Details/catch-7.jpg"
             class="d-block w-100"
+            style="height: 600px; object-fit: cover;"
             alt="#"
           />
         </div>
@@ -132,7 +135,10 @@
     <main>
       <div class="row">
         <div class="col-sm-12">
-          <div class="card border-secondary mb-3">
+          <div
+            class="card border-secondary mb-3 "
+            style="border-radius: 10px; margin: 15px; 5px; 15px; 5px"
+          >
             <div class="card-body">
               <h5 class="card-title text-center">
                 General lay-out and land improvement
@@ -160,122 +166,117 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card border-secondary mb-3">
-            <img
-              src="Present.Details/download.jpeg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Hotel</h5>
-              <p class="card-text">
-                The designed building is intended for accommodation of clients
-                of a complex. The hotel is a five-storied building of 16 m high
-                above the ground level and one technical floor below ground
-                level, with the building area of 828.00 sq. m (category 4 ****,
-                for 62 rooms) The building belongs to the main constructive
-                system with longitudinal external and internal bearing walls.
-                The building framework: monolithic reinforced concrete beams and
-                columns The foundation: monolithic reinforced concrete raft
-                External walls: ceramic block (380 mm thick) or brick of porous
-                brick (380 mm thick). First floor plate: monolithic reinforced
-                concrete (200 mm thick). Floor and roof slab: monolithic
-                reinforced concrete (200 mm thick). Roof: heat-insulated
-                membrane with an internal organized drain. Internal walls:
-                ceramic block (250 mm thick) or brick block from a porous brick
-                (250 mm thick) Partitions: gypsum board (with siding by
-                plasterboard in two layers on both sides 150 mm thick with sound
-                insulation from mineral wool slabs.
-              </p>
-              <a href="#" class="btn btn-dark">More information</a>
+        <div class="row">
+          <div class="col-sm-4">
+            <div
+              class="card border-secondary mb-3"
+              style="border-radius: 10px;"
+            >
+              <img
+                src="Present.Details/download.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Hotel</h5>
+                <p class="card-text">
+                  The designed building is intended for accommodation of clients
+                  of a complex. The hotel is a five-storied building of 16 m
+                  high above the ground level and one technical floor below
+                  ground level, with the building area of 828.00 sq. m (category
+                  4 ****, for 62 rooms) The building belongs to the main
+                  constructive system with longitudinal external and internal
+                  bearing walls. The building framework: monolithic reinforced
+                  concrete beams and columns The foundation: monolithic
+                  reinforced concrete raft External walls: ceramic block (380 mm
+                  thick) or brick of porous brick (380 mm thick). First floor
+                  plate: monolithic reinforced concrete (200 mm thick). Floor
+                  and roof slab: monolithic reinforced concrete (200 mm thick).
+                  Roof: heat-insulated membrane with an internal organized
+                  drain. Internal walls: ceramic block (250 mm thick) or brick
+                  block from a porous brick (250 mm thick) Partitions: gypsum
+                  board (with siding by plasterboard in two layers on both sides
+                  150 mm thick with sound insulation from mineral wool slabs.
+                </p>
+                <a href="#" class="btn btn-dark">More information</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <div
+              class="card border-secondary mb-3"
+              style="border-radius: 10px;"
+            >
+              <img
+                src="Present.Details/b311dc0b7301e7408ccdedb30f92ef85.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5>Restaurant</h5>
+                <p class="card-text">
+                  The designed building is intended for providing high-quality
+                  food services with a wide range of dishes and comfortable
+                  pastime of the clients. The restaurant is a two-storied
+                  building of 8 meters high, with the building area of 540 sq.m.
+                  The building belongs to the main constructive system with
+                  longitudinal external and internal bearing walls. The building
+                  framework: monolithic reinforced concrete beams and columns
+                  The foundation: monolithic reinforced concrete raft External
+                  walls: ceramic block (380 mm thick) or brick of porous brick
+                  (380 mm thick). First floor plate: monolithic reinforced
+                  concrete (200 mm thick). Floor and roof slab: monolithic
+                  reinforced concrete (200 mm thick). Roof: heat-insulated
+                  membrane with an internal organized drain. Internal walls:
+                  ceramic block (250 mm thick) or brick block from a porous
+                  brick (250 mm thick) Partitions: gypsum board (with siding by
+                  plasterboard in two layers on both sides 150 mm thick with
+                  sound insulation from mineral wool slabs .
+                </p>
+                <a href="#" class="btn btn-dark">More information</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <div
+              class="card border-secondary mb-3"
+              style="border-radius: 10px;"
+            >
+              <img
+                src="Present.Details/download (1).jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Recreational complex</h5>
+                <p class="card-text">
+                  The designed building is intended for providing professional
+                  recreational and cosmetology services for clients. It is a
+                  two-storied building of 8 m high, with the building area of
+                  576 sq.m. The building belongs to the main constructive system
+                  with longitudinal external and internal bearing walls. The
+                  building framework: monolithic reinforced concrete beams and
+                  columns The foundation: monolithic reinforced concrete raft
+                  External walls: ceramic block (380 mm thick) or brick of
+                  porous brick (380 mm thick). First floor plate: monolithic
+                  reinforced concrete (200 mm thick). Floor and roof slab:
+                  monolithic reinforced concrete (200 mm thick). Roof:
+                  heat-insulated membrane with an internal organized drain.
+                  Internal walls: ceramic block (250 mm thick) or brick block
+                  from a porous brick (250 mm thick) Partitions – brick 150 mm
+                  thick .
+                </p>
+                <a href="#" class="btn btn-dark">More information</a>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
-          <div class="card border-secondary mb-3">
-            <img
-              src="Present.Details/b311dc0b7301e7408ccdedb30f92ef85.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5>Restaurant</h5>
-              <p class="card-text">
-                The designed building is intended for providing high-quality
-                food services with a wide range of dishes and comfortable
-                pastime of the clients. The restaurant is a two-storied building
-                of 8 meters high, with the building area of 540 sq.m. The
-                building belongs to the main constructive system with
-                longitudinal external and internal bearing walls. The building
-                framework: monolithic reinforced concrete beams and columns The
-                foundation: monolithic reinforced concrete raft External walls:
-                ceramic block (380 mm thick) or brick of porous brick (380 mm
-                thick). First floor plate: monolithic reinforced concrete (200
-                mm thick). Floor and roof slab: monolithic reinforced concrete
-                (200 mm thick). Roof: heat-insulated membrane with an internal
-                organized drain. Internal walls: ceramic block (250 mm thick) or
-                brick block from a porous brick (250 mm thick) Partitions:
-                gypsum board (with siding by plasterboard in two layers on both
-                sides 150 mm thick with sound insulation from mineral wool slabs
-                .
-              </p>
-              <a href="#" class="btn btn-dark">More information</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="card border-secondary mb-3">
-            <img
-              src="Present.Details/download (1).jpeg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Recreational complex</h5>
-              <p class="card-text">
-                The designed building is intended for providing professional
-                recreational and cosmetology services for clients. It is a
-                two-storied building of 8 m high, with the building area of 576
-                sq.m. The building belongs to the main constructive system with
-                longitudinal external and internal bearing walls. The building
-                framework: monolithic reinforced concrete beams and columns The
-                foundation: monolithic reinforced concrete raft External walls:
-                ceramic block (380 mm thick) or brick of porous brick (380 mm
-                thick). First floor plate: monolithic reinforced concrete (200
-                mm thick). Floor and roof slab: monolithic reinforced concrete
-                (200 mm thick). Roof: heat-insulated membrane with an internal
-                organized drain. Internal walls: ceramic block (250 mm thick) or
-                brick block from a porous brick (250 mm thick) Partitions –
-                brick 150 mm thick .
-              </p>
-              <a href="#" class="btn btn-dark">More information</a>
-            </div>
-          </div>
-        </div>
+        <br />
       </div>
-
-      <div class="iframe-container" ; style="width: 100%; position: absolute;">
-        <h5>Location</h5>
-        <iframe
-          width="100%"
-          height="600"
-          src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=paradise%20beach%20carvoeiro%20algarve%20portugal+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
-          frameborder="0"
-          scrolling="no"
-          marginheight="0"
-          marginwidth="0"
-          ><a href="https://www.maps.ie/coordinates.html"
-            >You can find us here!</a
-          ></iframe
-        >
-      </div>
-      <br />
     </main>
 
     <!-- Optional JavaScript -->
