--- a/Lira.html
+++ b/Lira.html
@@ -303,6 +303,19 @@
             </div>
           </div>
         </div>
+
+        <div
+          class="card mb-3 border-secondary mb-3"
+          style="border-radius: 15px;"
+        >
+          <img
+            src="Present.Details/ko5a1720.sgtk_.jpg"
+            class="card-img-top"
+            style="border-radius: 15px;"
+            alt="Illustration"
+          />
+        </div>
+
         <div class="row">
           <div class="col-sm-12">
             <div
