--- a/Lira.html
+++ b/Lira.html
@@ -19,7 +19,7 @@
     <title>Lira Presentation</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #424242">
+    <nav class="navbar navbar-light" style="background-color: #6C757C">
       <a class="navbar-brand text-white" style="font-style: italic" href="###">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -61,7 +61,7 @@
             <a class="nav-link" href="#">Lira Prime Group</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">???</a>
+            <a class="nav-link" href="#">Gallery</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -77,7 +77,7 @@
             </a>
             <div
               class="dropdown-menu"
-              style="background-color: #954D61"
+              style="background-color: #CFD8DC"
               aria-labelledby="navbarDropdownMenuLink"
             >
               <a class="dropdown-item" href="#">English</a>
@@ -100,7 +100,7 @@
       </ol>
       <div class="carousel-caption d-none d-md-block">
         <h3>
-          The concept of the entertaining and recreational complex “LIRA”
+          The concept of the entertaining and recreational complex “Lira”
         </h3>
         <h5>Algarve Portugal</h5>
       </div>
@@ -141,29 +141,31 @@
               style="border-radius: 15px; "
             >
               <div class="card-body">
-                <h5 class="card-title text-center">
-                  General lay-out and land improvement
-                </h5>
-                <h6 class="card-subtitle mb-2 text-muted text-center">
-                  Card subtitle
-                </h6>
-                <p class="card-text">
-                  The complex consists of several main and also a number of
-                  auxiliary facilities. The main constructions are a hotel, with
-                  the building area of 828.00 sq.m, a restaurant, the building
-                  area of 540.00 sq.m and a sports and recreational complex of
-                  576 sq.m. There are three planned access points into the
-                  complex of the total area of 1.2 hectares. The main traffic
-                  stream is planned from the side of the hotel and the sports
-                  complex. All access points and approaches are stone paving. It
-                  is planned to build two eco-parking areas for 60 parking lots
-                  with a possibility to charge electric vehicles and also
-                  parking lots for bicycles. The project provides the proposals
-                  on land improvement within the area, vertical planning and
-                  gardening. In order to provide services to people with limited
-                  mobility (people with disabilities), the full range of actions
-                  is envisaged.
-                </p>
+                <div>
+                  <h5 class="card-title text-center">
+                    General lay-out and land improvement
+                  </h5>
+                  <h6 class="card-subtitle mb-2 text-muted text-center">
+                    Card subtitle
+                  </h6>
+                  <p class="card-text">
+                    The complex consists of several main and also a number of
+                    auxiliary facilities. The main constructions are a hotel,
+                    with the building area of 828.00 sq.m, a restaurant, the
+                    building area of 540.00 sq.m and a sports and recreational
+                    complex of 576 sq.m. There are three planned access points
+                    into the complex of the total area of 1.2 hectares. The main
+                    traffic stream is planned from the side of the hotel and the
+                    sports complex. All access points and approaches are stone
+                    paving. It is planned to build two eco-parking areas for 60
+                    parking lots with a possibility to charge electric vehicles
+                    and also parking lots for bicycles. The project provides the
+                    proposals on land improvement within the area, vertical
+                    planning and gardening. In order to provide services to
+                    people with limited mobility (people with disabilities), the
+                    full range of actions is envisaged.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -363,23 +365,36 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="..." class="card-img" alt="..." />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
+          <div class="col-sm-12 ">
+            <div
+              class="card border-secondary mb-3 "
+              style="border-radius: 15px; "
+            >
+              <div class="card-body text-center">
+                <h5 class="card-title text-center">
+                  Engineering networks
+                </h5>
+                <img
+                  class="text-center"
+                  src="Present.Details/waves-24px.svg"
+                  alt="Waves"
+                  style="height: 50px;"
+                />
+
+                <h6 class="card-subtitle mb-2 text-muted text-center">
+                  Water supply and sewerage
+                </h6>
+                <p class="card-text">
+                  To provide a complex with water, it is planned to drill an
+                  artesian well or to connect to the local water supply
+                  networks. Also in order to receive a quality drinking water,
+                  there will be a station of advanced water treatment. The
+                  domestic sewage system will be connected to the existing local
+                  system. Small treatment facilities will be installed for
+                  purification of process (technical) waters. The swimming pools
+                  are considered as firewater tanks, that is why it is planned
+                  to install a small pumping station.
+                </p>
               </div>
             </div>
           </div>
