Change body bg-color css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,23 @@
     />
 
     <title>Lira Presentation</title>
+
+    <style>
+      body {
+        background-color: #f4f4f4;
+      }
+      .footer-list {
+        padding-right: 20px;
+        text-align: center;
+        text-decoration-color: white;
+      }
+      .footer-bg {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #6C757C">
+    <nav class="navbar navbar-light" style="background-color: #343A40">
       <a class="navbar-brand text-white" style="font-style: italic" href="###">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -133,7 +147,7 @@
       </div>
     </div>
     <main>
-      <div style="margin: 10px; 15px; 5px; 15px ">
+      <div style="margin: 10px; 20px; 5px; 20px ">
         <div class="row">
           <div class="col-sm-12">
             <div
@@ -364,43 +378,47 @@
               </div>
             </div>
           </div>
-
-          <div class="col-sm-12 ">
-            <div
-              class="card border-secondary mb-3 "
-              style="border-radius: 15px; "
-            >
-              <div class="card-body text-center">
-                <h5 class="card-title text-center">
-                  Engineering networks
-                </h5>
-                <img
-                  class="text-center"
-                  src="Present.Details/waves-24px.svg"
-                  alt="Waves"
-                  style="height: 50px;"
-                />
-
-                <h6 class="card-subtitle mb-2 text-muted text-center">
-                  Water supply and sewerage
-                </h6>
-                <p class="card-text">
-                  To provide a complex with water, it is planned to drill an
-                  artesian well or to connect to the local water supply
-                  networks. Also in order to receive a quality drinking water,
-                  there will be a station of advanced water treatment. The
-                  domestic sewage system will be connected to the existing local
-                  system. Small treatment facilities will be installed for
-                  purification of process (technical) waters. The swimming pools
-                  are considered as firewater tanks, that is why it is planned
-                  to install a small pumping station.
-                </p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </main>
+
+    <div class="col-sm-12 ">
+      <div class="card border-secondary mb-3 " style="border-radius: 15px; ">
+        <div class="card-body text-center">
+          <h5 class="card-title text-center">
+            Engineering networks
+          </h5>
+          <img
+            class="text-center"
+            src="Present.Details/waves-24px.svg"
+            alt="Waves"
+            style="height: 50px;"
+          />
+
+          <h6 class="card-subtitle mb-2 text-muted text-center">
+            Water supply and sewerage
+          </h6>
+          <p class="card-text">
+            To provide a complex with water, it is planned to drill an artesian
+            well or to connect to the local water supply networks. Also in order
+            to receive a quality drinking water, there will be a station of
+            advanced water treatment. The domestic sewage system will be
+            connected to the existing local system. Small treatment facilities
+            will be installed for purification of process (technical) waters.
+            The swimming pools are considered as firewater tanks, that is why it
+            is planned to install a small pumping station.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer-bg">
+      <ul class="footer-list">
+        <li>list</li>
+        <li>list</li>
+        <li>list</li>
+      </ul>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
