Change nav color

--- a/index.html
+++ b/index.html
@@ -22,19 +22,16 @@
       body {
         background-color: #f4f4f4;
       }
-      .footer-list {
-        padding-right: 20px;
+      footer {
+        background-color: #111113;
         text-align: center;
-        text-decoration-color: white;
-      }
-      .footer-bg {
-        background-color: black;
+        color: white;
       }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #343A40">
-      <a class="navbar-brand text-white" style="font-style: italic" href="###">
+    <nav class="navbar navbar-light" style="background-color: #f4f4f4">
+      <a class="navbar-brand text-black" style="font-style: italic" href="###">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           height="30"
@@ -412,7 +409,7 @@
       </div>
     </div>
 
-    <footer class="footer-bg">
+    <footer>
       <ul class="footer-list">
         <li>list</li>
         <li>list</li>
