--- a/index.html
+++ b/index.html
@@ -429,16 +429,14 @@
             <h5 class="text-uppercase font-weight-bold">Follow us</h5>
 
 
-    <div class="row">
 
-        <ul class="text-center" style="list-style: none; ">
+        <ul class="text-md-left " style="list-style: none; ">
           <li><a href="https://facebook.com/colorlib"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
           <li><a href="https://twitter.com/colorlib"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
           <li><a href="https://instagram.com/colorlib"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/puikinsh"><i class="fa fa-github" aria-hidden="true"></i></a></li>
         
         </ul>
-        </div>
 
     </div>
 
