--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </a>
                         <div
                             class="dropdown-menu"
-                            style="background-color: #CFD8DC"
+                            style="background-color: #f4f4f4"
                             aria-labelledby="navbarDropdownMenuLink"
                         >
                             <a class="dropdown-item" href="#">English</a>
@@ -168,12 +168,12 @@
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title text-center">
-                                        General lay-out and land improvement
+                                        General layout and land improvement
                                     </h5>
                                     <h6
                                         class="card-subtitle mb-2 text-muted text-center"
                                     >
-                                        Card subtitle
+                                        Main Idea
                                     </h6>
                                     <p class="card-text">
                                         The complex consists of several main and
@@ -400,7 +400,7 @@
                                 <h6
                                     class="card-subtitle mb-2 text-muted text-center"
                                 >
-                                    Card subtitle
+                                    Plan
                                 </h6>
                                 <p class="card-text">
                                     Improvement of the territory provides for
