--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </a>
                         <div
                             class="dropdown-menu"
-                            style="background-color: #f4f4f4"
+                            style="background-color: white"
                             aria-labelledby="navbarDropdownMenuLink"
                         >
                             <a class="dropdown-item" href="#">English</a>
