--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h5>Algarve Portugal</h5>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item active" data-interval="3000">
                     <img
                         src="Present.Details/3-302-2000x1333.jpg"
                         class="d-block w-100"
@@ -139,7 +139,7 @@
                     />
                 </div>
 
-                <div class="carousel-item">
+                <div class="carousel-item" data-interval="3000">
                     <img
                         src="Present.Details/yj_gwsbyut.jpg"
                         class="d-block w-100"
@@ -147,7 +147,7 @@
                         alt="#"
                     />
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-interval="3000">
                     <img
                         src="Present.Details/catch-7.jpg"
                         class="d-block w-100"
