--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
 
-        <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -20,13 +18,8 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
 
+        <link rel="stylesheet" href="/Liracss.css" />
         <title>Lira Presentation</title>
-
-        <style>
-            body {
-                background-color: #f4f4f4;
-            }
-        </style>
     </head>
 
     <body>
@@ -105,7 +98,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- Navbar content -->
         </nav>
         <div class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -540,7 +532,13 @@
                 </div>
             </div>
         </div>
-
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+                class="embed-responsive-item"
+                src="https://goo.gl/maps/oV1Nb52x8LtBkvmZ6"
+                allowfullscreen
+            ></iframe>
+        </div>
         <footer
             class="page-footer font-small teal pt-4 background-color: #FFFFFF"
         >
