--- a/Lira.html
+++ b/Lira.html
@@ -3,7 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <link rel="stylesheet" href="/Liracss.css" />
+        <title>Lira Presentation</title>
     </head>
-    <body></body>
+    <body>
+        <nav class="nav-li">
+            <ul>
+                <li>Lira Prime Group</li>
+                <li>Algarve Portugal</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ul>
+        </nav>
+    </body>
 </html>
