--- a/index.html
+++ b/index.html
@@ -539,6 +539,28 @@
                 allowfullscreen
             ></iframe>
         </div>
+        <div style="margin: 15px 15px 15px 15px;">
+            <h4>Contact us!</h4>
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="First name"
+                        />
+                    </div>
+                    <div class="col">
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Last name"
+                        />
+                    </div>
+                </div>
+            </form>
+        </div>
+
         <footer
             class="page-footer font-small teal pt-4 background-color: #FFFFFF"
         >
