--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
+        <link rel="stylesheet" href="styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="/Liracss.css" />
         <title>Lira Presentation</title>
     </head>
 
@@ -150,7 +151,7 @@
             </div>
         </div>
         <main>
-            <div style="margin: 15px 20px 5px 20px;">
+            <div></div>
                 <div class="row">
                     <div class="col-sm-12">
                         <div
