Add links in header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
-        <link rel="stylesheet" href="styles.css" />
-        <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 
+        <link rel="stylesheet" href="/Liracss.css" />
         <title>Lira Presentation</title>
     </head>
 
@@ -64,10 +63,20 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Algarve. Portugal</a>
+                        <a
+                            class="nav-link"
+                            target="blank"
+                            href="https://www.google.com/search?q=algarve+portugal&tbm=isch&ved=2ahUKEwjB38T5otvnAhVP0oUKHURqAFEQ2-cCegQIABAA&oq=algarve+portu&gs_l=img.1.0.0l10.3629.4994..6184...0.0..0.143.587.4j2......0....1..gws-wiz-img.......0i67.LTBtLSMZksI&ei=f-9LXoGkFs-klwTE1IGIBQ&bih=821&biw=1440&rlz=1C5CHFA_enDE888DE888"
+                            >Algarve. Portugal</a
+                        >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Lira Prime Group</a>
+                        <a
+                            class="nav-link"
+                            target="_blank"
+                            href="https://liraprimegroup.com/"
+                            >Lira Prime Group</a
+                        >
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Gallery</a>
@@ -151,7 +160,7 @@
             </div>
         </div>
         <main>
-            <div></div>
+            <div style="margin: 15px 20px 5px 20px;">
                 <div class="row">
                     <div class="col-sm-12">
                         <div
