--- a/index.html
+++ b/index.html
@@ -544,9 +544,12 @@
         </div>
         <div class="embed-responsive embed-responsive-16by9">
             <iframe
-                class="embed-responsive-item"
-                src="https://goo.gl/maps/oV1Nb52x8LtBkvmZ6"
-                allowfullscreen
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50942.85687939318!2d-8.04560606459461!3d37.05918569834347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1ab31bae2cf38d%3A0x500ebbde490b4a0!2sAlmansil%2C%20Portugal!5e0!3m2!1sde!2sde!4v1582037298075!5m2!1sde!2sde"
+                width="600"
+                height="450"
+                frameborder="0"
+                style="border:0;"
+                allowfullscreen=""
             ></iframe>
         </div>
         <div style="margin: 15px 15px 15px 15px;">
