--- a/index.html
+++ b/index.html
@@ -571,6 +571,13 @@
                             placeholder="Last name"
                         />
                     </div>
+                    <div class="col">
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="E-mail"
+                        />
+                    </div>
                 </div>
             </form>
         </div>
