--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <div style="margin: 15px 15px 15px 15px;">
             <h4>Contact us!</h4>
 
-            <form>
+            <form style="margin-bottom: 15px;">
                 <div class="row">
                     <div class="col">
                         <input
@@ -578,6 +578,16 @@
                             placeholder="E-mail"
                         />
                     </div>
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlSelect2">Your message:</label>
+                    <input
+                        multiple
+                        class="form-control"
+                        id="exampleFormControlSelect2"
+                        style="margin-bottom: 10px;"
+                    />
+                    <a class="btn btn-secondary"> Send </a>
                 </div>
             </form>
         </div>
