--- a/index.html
+++ b/index.html
@@ -618,7 +618,10 @@
                             Follow us
                         </h5>
 
-                        <ul class="text-md-left " style="list-style: none; ">
+                        <ul
+                            class="text-md-left "
+                            style="list-style: none; display: flex; font-size: 30px; justify-content: space-around; "
+                        >
                             <li>
                                 <a href="https://facebook.com/colorlib"
                                     ><i
