--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a
                 class="navbar-brand text-black"
                 style="font-style: italic"
-                href="###"
+                href="https://eraamate.github.io/Presentation-LiraProjekt/"
             >
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
