--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
 
-        <link rel="stylesheet" href="/Liracss.css" />
+        <link rel="stylesheet" href="styles.css" />
         <title>Lira Presentation</title>
     </head>
 
@@ -382,9 +382,9 @@
                     style="border-radius: 15px;"
                 >
                     <img
-                        src="Present.Details/ko5a1720.sgtk_.jpg"
+                        src="Present.Details/Catch_4.jpg"
                         class="card-img-top"
-                        style="border-radius: 15px;"
+                        style="border-radius: 15px; object-fit: cover;"
                         alt="Illustration"
                     />
                 </div>
@@ -552,44 +552,16 @@
                 allowfullscreen=""
             ></iframe>
         </div>
-        <div style="margin: 15px 15px 15px 15px;">
-            <h4>Contact us!</h4>
-
-            <form style="margin-bottom: 15px;">
-                <div class="row">
-                    <div class="col">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="First name"
-                        />
-                    </div>
-                    <div class="col">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Last name"
-                        />
-                    </div>
-                    <div class="col">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="E-mail"
-                        />
-                    </div>
+        <div class="contact">
+            <div class="contact-text">
+                <div class="contact-items">
+                    <h2>Contact Us</h2>
+                    <input type="text" placeholder="Your name" />
+                    <input type="text" placeholder="Your mail" />
+                    <textarea cols="20" rows="20">Your message</textarea>
+                    <a href="#">Submit</a>
                 </div>
-                <div class="form-group">
-                    <label for="exampleFormControlSelect2">Your message:</label>
-                    <input
-                        multiple
-                        class="form-control"
-                        id="exampleFormControlSelect2"
-                        style="margin-bottom: 10px;"
-                    />
-                    <a class="btn btn-secondary"> Send </a>
-                </div>
-            </form>
+            </div>
         </div>
 
         <footer
@@ -620,7 +592,7 @@
 
                         <ul
                             class="text-md-left "
-                            style="list-style: none; display: flex; font-size: 30px; justify-content: space-around; "
+                            style="list-style: none; display: flex; font-size: 30px; justify-content: space-around; color: black; "
                         >
                             <li>
                                 <a href="https://facebook.com/colorlib"
