Remove d-block from carousel text

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     data-slide-to="3"
                 ></li>
             </ol>
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md">
                 <h3>
                     The concept of the entertaining and recreational complex
                     “Lira”
